fix header slightly covers .popover-content

--- a/app/assets/stylesheets/tags.css
+++ b/app/assets/stylesheets/tags.css
@@ -1,9 +1,20 @@
 .popover{
-	z-index: 1;
+  /* z-index: 1; */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 .popover-title {
     color: #333;
     font-size: 14px;
     text-align: center;
     font-weight: bold;
+}
+
+.sec-3 {
+  background: blueviolet;
+}
+
+.popover-content {
+  padding: 9px 14px;
 }
